fix tabs wraping out the box style

--- a/swiftplugin/swiftplugin/static/css/swiftplugin.css
+++ b/swiftplugin/swiftplugin/static/css/swiftplugin.css
@@ -39,7 +39,9 @@ div#code-container-area {
     border: 1px;
     border-style: solid;
     border-radius: 16px;
-    border-color: #ccc!important;
+    border-color: rgb(132, 132, 132)!important;
+    height:80vh;
+    overflow:hidden;
 }
 
 .code-instructions-background {
@@ -144,15 +146,22 @@ div#code-container-area {
     border-color: #7730b0 !important;
 }
 
-/*
-textarea#code-solution-area {
-    border: 1px solid #e6e6e6;
-	width: 100%;
-}
-*/
+
 
 @media (max-width: 768px){
-	.CodeMirror-wrap{
-		width: 100% !important;
+    .CodeMirror-wrap{
+        width: 100% !important;
+        min-height: 400px;
 	}
+    div#code-container-area {
+        height:100vh;
+        overflow:hidden;
+
+    }
+    
+    textarea#code-solution-area {
+        border: 1px solid #e6e6e6;
+        width: 100%;
+        min-height: 400px;
+    }
 }
